--- a/src/main/resources/templates/client/clients.html
+++ b/src/main/resources/templates/client/clients.html
@@ -30,7 +30,9 @@
             <td>
                 <a th:href="@{'/clients/' + ${client.clientId}}" class="btn btn-primary btn-sm">View</a>
                 <a th:href="@{'/clients/edit/' + ${client.clientId}}" class="btn btn-warning btn-sm">Edit</a>
-                <a th:href="@{'/clients/delete/' + ${client.clientId}}" class="btn btn-danger btn-sm">Delete</a>
+                <form th:action="@{'/clients/delete/' + ${client.clientId}}" method="post">
+                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                </form>
             </td>
         </tr>
         </tbody>
