--- a/src/main/resources/templates/hearing/hearing.html
+++ b/src/main/resources/templates/hearing/hearing.html
@@ -25,9 +25,9 @@
             <td th:text="${hearing.appointmentAddress}"></td>
         </tr>
         <tr>
-            <th>Lawsuit ID</th>
+            <th>Lawsuit</th>
             <td>
-                <span th:text="${hearing.lawsuit.lawsuitId}"></span>
+                <span th:text="${hearing.lawsuit.reason}"></span>
                 <a th:href="@{'/lawsuits/' + ${hearing.lawsuit.lawsuitId}}" class="btn btn-info btn-sm ml-2">View Lawsuit</a>
             </td>
         </tr>
