--- a/src/main/resources/templates/lawyer/lawyers.html
+++ b/src/main/resources/templates/lawyer/lawyers.html
@@ -32,7 +32,9 @@
             <td>
                 <a th:href="@{'/lawyers/' + ${lawyer.lawyerId}}" class="btn btn-primary btn-sm">View</a>
                 <a th:href="@{'/lawyers/edit/' + ${lawyer.lawyerId}}" class="btn btn-warning btn-sm">Edit</a>
-                <a th:href="@{'/lawyers/delete/' + ${lawyer.lawyerId}}" class="btn btn-danger btn-sm">Delete</a>
+                <form th:action="@{'/lawyers/delete/' + ${lawyer.lawyerId}}" method="post">
+                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                </form>
             </td>
         </tr>
         </tbody>
