--- a/src/main/resources/templates/lawyerLawsuit/lawyerLawsuit.html
+++ b/src/main/resources/templates/lawyerLawsuit/lawyerLawsuit.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{main.html}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout.html}" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Lawyer-Lawsuit Assignment Details</title>
@@ -84,7 +85,7 @@
         </tr>
     </table>
 
-    <a th:href="@{'/lawyer-lawsuits/edit/' + ${lawyerLawsuit.id}}" class="btn btn-warning mt-3">Edit Assignment</a>
+    <a sec:authorize="hasRole('ADMIN') or @environment.acceptsProfiles('h2')" th:href="@{'/lawyer-lawsuits/edit/' + ${lawyerLawsuit.id}}" class="btn btn-warning mt-3">Edit Assignment</a>
 </main>
 </body>
 </html>
