--- a/src/main/resources/templates/client/clients.html
+++ b/src/main/resources/templates/client/clients.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  layout:decorate="~{main.html}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout.html}" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Clients</title>
@@ -29,15 +30,15 @@
             <td th:text="${#lists.size(client.lawsuits)}"></td>
             <td>
                 <a th:href="@{'/clients/' + ${client.clientId}}" class="btn btn-primary btn-sm">View</a>
-                <a th:href="@{'/clients/edit/' + ${client.clientId}}" class="btn btn-warning btn-sm">Edit</a>
-                <form th:action="@{'/clients/delete/' + ${client.clientId}}" method="post">
+                <a sec:authorize="hasRole('ADMIN') or @environment.acceptsProfiles('h2')" th:href="@{'/clients/edit/' + ${client.clientId}}" class="btn btn-warning btn-sm">Edit</a>
+                <form sec:authorize="hasRole('ADMIN') or @environment.acceptsProfiles('h2')" th:action="@{'/clients/delete/' + ${client.clientId}}" method="post">
                     <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                 </form>
             </td>
         </tr>
         </tbody>
     </table>
-    <a th:href="@{'/clients/create'}" class="btn btn-success">Add New Client</a>
+    <a sec:authorize="hasRole('ADMIN') or @environment.acceptsProfiles('h2')" th:href="@{'/clients/create'}" class="btn btn-success">Add New Client</a>
 </main>
 </body>
 </html>
