--- a/src/main/resources/templates/lawsuit/form.html
+++ b/src/main/resources/templates/lawsuit/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{main.html}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
 <head>
     <meta charset="UTF-8">
     <title th:text="${formAction == '/lawsuits' ? 'Create Lawsuit' : 'Edit Lawsuit'}"></title>
