--- a/src/main/resources/templates/lawyer/lawyer.html
+++ b/src/main/resources/templates/lawyer/lawyer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{main.html}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout.html}" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Lawyer Details</title>
@@ -60,7 +61,7 @@
         </tbody>
     </table>
 
-    <a th:href="@{'/lawyers/edit/' + ${lawyer.lawyerId}}" class="btn btn-warning mt-3">Edit Lawyer</a>
+    <a sec:authorize="hasRole('ADMIN') or @environment.acceptsProfiles('h2')" th:href="@{'/lawyers/edit/' + ${lawyer.lawyerId}}" class="btn btn-warning mt-3">Edit Lawyer</a>
 </main>
 </body>
 </html>
